--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pop-icon-theme (1.1.14) artful; urgency=medium
+
+  * Fix inheritance problem that broke branding
+
+ -- Ian Santopietro <ian@system76.com>  Fri, 01 Dec 2017 10:00:32 -0700
+
 pop-icon-theme (1.1.13) artful; urgency=medium
 
   * Add some Granite-specific icons.
