--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pop-icon-theme (1.2.0) artful; urgency=medium
+
+  * Icons from upstream.
+
+ -- Ian Santopietro <ian@system76.com>  Fri, 01 Dec 2017 11:52:04 -0700
+
 pop-icon-theme (1.1.13) artful; urgency=medium
 
   * Add some Granite-specific icons.
