--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pop-icon-theme (1.3.0) bionic; urgency=medium
+
+  * Split out application icons to separate icon theme
+
+ -- Jeremy Soller <jeremy@system76.com>  Mon, 21 May 2018 11:16:32 -0600
+
 pop-icon-theme (1.2.2) artful; urgency=medium
 
   * GOA Nextcloud Icon workaround.
