--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pop-icon-theme (2.0.0) disco; urgency=medium
+
+  * All-new freshly designed icons
+
+ -- Ian Santopietro <isantop@gmail.com>  Fri, 01 Mar 2019 11:45:57 -0700
+
 pop-icon-theme (1.3.0) bionic; urgency=medium
 
   * Split out application icons to separate icon theme
