--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pop-icon-theme (1.4.0) disco; urgency=medium
+
+  * Adds in firmware-related icons for upcoming firmware-manager
+
+ -- Ian Santopietro <ian@akira>  Wed, 19 Jun 2019 15:21:40 -0600
+
 pop-icon-theme (1.3.0) bionic; urgency=medium
 
   * Split out application icons to separate icon theme
