build(deb): Update version number due to major arch change
Since we're moving from PNG to SVG icons, we should increment the
version to indicate this change

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pop-icon-theme (3.0.0) impish; urgency=medium
+
+  * Switch icons to SVG format
+
+ -- Ian Santopietro <ian@system76.com>  Thu, 10 Mar 2022 14:12:08 -0700
+
 pop-icon-theme (2.1.0) disco; urgency=medium
 
   * New symbolic firmware icons.
