--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pop-icon-theme (3.2.0) jammy; urgency=medium
+
+  * Add missing icon for WiFi Off
+
+ -- Ian Santopietro <ian@system76.com>  Wed, 13 Jul 2022 00:11:03 -0600
+
 pop-icon-theme (3.1.0) jammy; urgency=medium
 
   * Remove rendundant data from SVG icons
