--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pop-icon-theme (3.3.0) jammy; urgency=medium
+
+  * Updated cursors now avoid white-background cursors
+  * Cursor rendering integrated into main rendering
+
+ -- Ian Santopietro <ian@system76.com>  Mon, 01 Aug 2022 19:53:31 -0600
+
 pop-icon-theme (3.2.0) jammy; urgency=medium
 
   * Add missing icon for WiFi Off
