--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pop-icon-theme (3.4.0) jammy; urgency=medium
+
+  * Add icon for text/x-kotlin mimetype
+
+ -- Ian Santopietro <ian@system76.com>  Tue, 04 Oct 2022 10:47:42 -0600
+
 pop-icon-theme (3.3.0) jammy; urgency=medium
 
   * Updated cursors now avoid white-background cursors
