--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pop-icon-theme (3.5.0) UNRELEASED; urgency=medium
+
+  * Add icon for window-stack-symbolic
+  * Fix bad symlinks
+  * Re-render theme
+
+ -- Ian Santopietro <ian@system76.com>  Tue, 13 Jun 2023 15:06:42 -0600
+
 pop-icon-theme (3.4.0) jammy; urgency=medium
 
   * Add icon for text/x-kotlin mimetype
